--- a/libostack/public_html/index.html
+++ b/libostack/public_html/index.html
@@ -11,6 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>List of items available may be available in some time. Now only for (software) development purpose.</div>
+        <div class="paragraph">
+            <span class="text">List of items available may be available in some time. Now only for (software) development purpose.</span>
+            <span class="text">To be complemented/migrated from other sources by usage needs</span>
+        </div>
     </body>
 </html>
