some notes added

--- a/libostack-dls/public_html/index.html
+++ b/libostack-dls/public_html/index.html
@@ -11,9 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="paragraph">
-            <span class="text">List of items available may be available in some time. Now only for (software) development purpose.</span>
-            <span class="text">To be complemented/migrated from other sources by usage needs</span>
-        </div>
+        <ul class="paragraph">
+            <li class="text">List of items available may be available in some time. Now only for (software) development purpose.</li>
+            <li class="text">To be complemented/migrated from other sources by usage needs</li>
+            <li class="text">The store had become dls and is to provide already written script parts as usable nodes for repeatable utilization.</li>
+        </ul>
     </body>
 </html>
