--- a/ozvopen.dls/public_html/index.html
+++ b/ozvopen.dls/public_html/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
         <ul class="paragraph">
             <li class="text">List of items available may be available in some time. Now only for (software) development purpose.</li>
             <li class="text">To be complemented/migrated from other sources by usage needs</li>
-            <li class="text">The store had become dls and is to provide already written script parts as usable nodes for repeatable utilization.</li>
+            <li class="text">The store had become dls and is to provide already written script parts as usable nodes for scalable utilization.</li>
         </ul>
     </body>
 </html>
